Update grammar, clean slate a bunch of old logic

--- a/implog/Cargo.toml
+++ b/implog/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/bin/cli.rs"
 lalrpop = "*"
 
 [dependencies]
+either = "*"
 hashbrown = "*"
 lalrpop-util = { version = "*", features = ["lexer", "unicode"] }
 rustc-hash = "*"
